[project]
name = "myconso"
version = "0.0.2"
description = "Async Python client to interact with myconso.net API"
readme = "README.md"
authors = [
    {name = "Rémi Jouannet", email = "remijouannet@gmail.com"},
]
requires-python = ">=3.10"
packages = [
    { include = "myconso" }
]
dependencies = [
    "aiohttp",
    "aiohttp-retry>=2.9.1",
    "pyjwt[crypto]",
]

[project.urls]
homepage = "https://github.com/remijouannet/myconso.py"
repository = "https://github.com/remijouannet/myconso.py"

[project.scripts]
myconsocli = "myconso.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit>=4.2.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "myconso/*",
]

[tool.hatch.build.targets.wheel]
packages = ["myconso"]
only-packages = true

[tool.ruff]
line-length = 88
include = ["tests/*.py", "myconso/*.py"]

[tool.ruff.lint]
select = [
    # flake8-async
    "ASYNC",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff
    "RUF",
    # flake8-quotes
    "Q",
    # pylint
    "PL",
]

[tool.mypy]
exclude = "tests/"
files = "myconso/*.py"
